# battleships_semestralka

./: Battleship.cpp  Battleship.h  Board.cpp  Board.h  CMakeLists.txt  Client.cpp  Client.h  Game.cpp  Game.h  Makefile  Server.cpp  Server.h  main.cpp  mainClient.cpp  mainServerClient.cpp
